--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -23,3 +23,6 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+<br>
+<br>
+<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
