--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>WeightablePracticeScaffolding</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-	<% if user_signed_in? %>
-	Signed in as <%= current_user.name %>. Not you?
-	<%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
-	<% else %>
-	<%= link_to "Sign up", new_user_registration_path %> or
-	<%= link_to "Sign in", new_user_session_path %>
-	<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-	<% end %>
-
-<%= yield %>
-
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Weightable Practice Scaffolding" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Weightable Practice Scaffolding" %>">
+    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <header>
+      <%= render 'layouts/navigation' %>
+    </header>
+    <main role="main">
+       <%= render 'layouts/messages' %>
+       <%= yield %>
+    </main>
+  </body>
 </html>
