--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <main role="main" id="landing">
        <%= render 'layouts/messages' %>
        <!-- this adds text/content to the layout after these global elements -->
-       <div class="container" >
+       <div class="container" id="words" >
 	       	<div class="row">
 	       		<div class="span9">
 	       			    <%= yield %> 
