--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -26,7 +26,10 @@
 Signed in as <%= current_user.name %>. Not you?
 <%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
 <% else %>
-<%= link_to "Sign up", new_user_registration_path %> or
-<%= link_to "Sign in", new_user_session_path %>
-<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+<%= link_to "Sign in", new_user_session_path %> <br> or
+<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %> <br><br>
+New to weightable?
+
+<%= link_to "Sign up", new_user_registration_path %> 
+
 <% end %>
