--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -40,8 +40,9 @@
 	    <% @user.weigh_ins.each do |weight| %>
 	            <div class="weighinWrapper">
 	                <span class="name"><%= @user.name %>
-	                <span class="time"><%= time_ago_in_words(weigh_in.created_at) %></span>
-	                <p> <%= weigh_in.content %> </p>
+	                <span class="time"><%= time_ago_in_words(weight.created_at) %></span>
+	                <p> <%= weight.weight %> </p>
+	                <p> <%= weight.status %> </p>
 	            </div>
 	    <% end %>
 	</div>
