--- a/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
@@ -1,6 +1,6 @@
 body {
   background-color: #fff;
-  color: #333;
+  color: #383530;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -11,6 +11,10 @@ body {
   padding-left: 40px;
 }
 
+navbar-brand {
+  
+  padding: 0;
+  }
 /*
 
 @media(max-width:767px){
@@ -100,9 +104,10 @@ pre {
 }
 
 a {
-  color: #7cbeef;
+  color: #ed6c44;
   &:hover {
-    color: #7cbeef;
+    color: #ed6c44;
+    background-color: #386380;
     
   }
 }
@@ -151,7 +156,42 @@ ul.nav.navbar-nav{
 }
 
 
+@media(min-width:768px){
 
-ul.nav.navbar-nav a{
-  padding-left: 30px;
+  ul.nav.navbar-nav a{
+    padding: 28px;
+    color: #989491;
+    &:hover {
+      color: #fff; 
+      text-decoration: none;
+
+    }
+  }
+
 }
+
+
+@media(max-width:767px){
+
+   ul.nav.navbar-nav a{
+      float: left;
+      clear: both;
+      padding: 10px;
+      &:hover {
+      color: #fff; 
+      text-decoration: none;
+      margin: 0 auto;
+      width: 100%;
+
+    }
+
+  }
+  
+}
+ 
+
+
+
+
+
+
