--- a/weightable_practice_scaffolding/app/views/layouts/_navigation_links.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/_navigation_links.html.erb
@@ -3,9 +3,9 @@
 <% if user_signed_in? %>
 	<%= link_to "Me", current_user%>
 	<%= link_to "Feed" %>
-	<%= link_to "Friends" %>
-	<%= link_to "Settings", edit_user_registration_path %></li>
-	<%= link_to "Logout", destroy_user_session_path, method: "delete" %></li>
+	<%= link_to "Friends", users_path %>
+	<%= link_to "Settings", edit_user_registration_path %>
+	<%= link_to "Logout", destroy_user_session_path, method: "delete" %>
 
 <% else %>
 	<%= link_to "About" %> <br>
