Add temp pic_url text to user#show page to test FB image import.

--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -3,6 +3,8 @@
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
+  <%= @user.pic_url %>
+
 </p>
 
  		 <%= @user.weigh_ins.size %> Weigh-Ins     |     
