Generate migration for adding goal to user table.

--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
-  <%= @user.profile_pic %>
+  <img class="profile-pic clearfix" src=<%= @user.profile_pic %> />
 
 </p>
 
