--- a/weightable_practice_scaffolding/app/views/layouts/_navigation_links.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/_navigation_links.html.erb
@@ -1,15 +1,15 @@
 <%# add navigation links to this file %>
 
 <% if user_signed_in? %>
-	<%= link_to "Me", current_user%>
-	<%= link_to "Feed" %>
-	<%= link_to "Friends", users_path %>
-	<%= link_to "Settings", edit_user_registration_path %>
-	<%= link_to "Logout", destroy_user_session_path, method: "delete" %>
+        <%= link_to "Me", current_user%>
+        <%= link_to "Feed", root_path %>
+        <%= link_to "Friends", users_path %>
+        <%= link_to "Settings", edit_user_registration_path %>
+        <%= link_to "Logout", destroy_user_session_path, method: "delete" %>
 
 <% else %>
-	<%= link_to "About" %> <br>
-	
+        <%= link_to "About" %> <br>
+        
 
 
 <% end %>
