--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -11,11 +11,14 @@
   </thead>
 
   <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= link_to 'Add friend', friendships_path( friend_id: user), method: :post %></td>
-      </tr>
+    <% if current_user %> 
+      <% @user.friendships.each do |friendship| %>
+        <tr>
+          <td><%= friendship.friend.name %></td>
+          <td><%= friendship.friend.name %></td>
+          
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
