--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<% require "date" %>
+
+
 <p id="notice"><%= notice %></p>
 <script src="Chart.js"></script>
 
@@ -7,15 +10,12 @@
   <img class="profile-pic clearfix" src=<%= @user.profile_pic %> />
 
 </p>
-<canvas id="myChart" width="400" height="400"></canvas>
-
  		 <%= @user.weigh_ins.size %> Weigh-Ins     |     
        
         <span class="spacing"><%= @user.friends.size %> Fat Friends</span> <br><br>
-
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
-
+<canvas id="myChart" width="400" height="400"></canvas>
 <div id="createWeighIn" >
 	  <h1>Post a weigh-in</h1>
 	    <p>
@@ -43,6 +43,7 @@
 	    <h1>Your Weigh-Ins</h1>
 	    <% @user.weigh_ins.each do |weight| %>
 	    <% @weights.unshift(weight.weight) %>
+	    <% @dates.unshift((weight.created_at).strftime("%a")) %>
 	            <div class="weighinWrapper">
 	                <span class="name"><%= @user.name %>
 	                <span class="time">posted <%= time_ago_in_words(weight.created_at) %> ago</span>
@@ -52,18 +53,36 @@
 	    <% end %>
 	</div>
 	<script type="text/javascript">$(function() {
-  data = {
-    labels : ["April","May","June","July"],
+	options = {
+		// set to line chart instead of curve
+		//Boolean - If we want to override with a hard coded scale
+		scaleOverride : true,
+		
+		//** Required if scaleOverride is true **
+		//Number - The number of steps in a hard coded scale
+		scaleSteps : 5,
+		//Number - The value jump in the hard coded scale
+		scaleStepWidth : <%= (((@user.weigh_ins.first.weight+5)-(@user.goal-15))/5) %>,
+		//Number - The scale starting value
+		scaleStartValue : <%= @user.goal-2%>,
+		
+		
+
+
+	}
+
+  	data = {
+    labels :  <%=raw @dates.length > 7 ? @dates[-7,7] : @dates %>,
     datasets : [
       {
-        fillColor : "rgba(220,220,220,0.5)",
-        strokeColor : "rgba(220,220,220,1)",
-        pointColor : "rgba(220,220,220,1)",
-        pointStrokeColor : "#aaa",
-        data : <%= @weights %>
+        fillColor : "rgba(0,255,0,0.3)",
+        strokeColor : "rgba(255,93,0,.9)",
+        pointColor : "rgba(51,51,51,1)",
+        pointStrokeColor : "rgba(0,132,164,1)",
+        data : <%= @weights.length > 7 ? @weights[-7,7] : @weights %>
       }
     ]
   }
 
-  myNewChart = new Chart($("#myChart").get(0).getContext("2d")).Line(data)
+  myNewChart = new Chart($("#myChart").get(0).getContext("2d")).Line(data,options)
 });</script>
