--- a/weightable_practice_scaffolding/app/views/users/_form.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_form.html.erb
@@ -16,7 +16,11 @@
     <%= f.text_field :name %><br><br>
 
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email %><br><br>
+
+    <%= f.label :goal %><br>
+    <%= f.text_field :goal %><br><br>
+
   </div>
   <div class="actions">
     <%= f.submit %>
