Add carrier wave gem for image uploading without facebook auto upload.

--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
-  <img class="profile-pic clearfix" src=<%= @user.profile_pic %> />
+  <img class="profile-pic clearfix" src=<%= @user.profile_pic_url(:medium) %> />
 
 </p>
  		 <%= @user.weigh_ins.size %> Weigh-Ins     |     
