--- a/weightable_practice_scaffolding/app/views/users/_form.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_form.html.erb
@@ -21,6 +21,9 @@
     <%= f.label :goal %><br>
     <%= f.text_field :goal %><br><br>
 
+    <%= f.label :profile_pic %><br>
+    <%= f.file_field :profile_pic %><br><br>
+
   </div>
   <div class="actions">
     <%= f.submit %>
