Add form to upload image if user does not have profile pic; otherwise the profile pic is displayed

--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -7,8 +7,35 @@
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
-  <img class="profile-pic clearfix" src=<%= @user.profile_pic_url(:medium) %> />
+  <% if @user.profile_pic_url %>
+    <img class="profile-pic clearfix" src=<%= @user.profile_pic_url(:medium) %> />
+  <% else %>
+    <div class="no-image-wrapper">
+      <%= form_for(@user) do |f| %>
+        <% if @user.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
+            <ul>
+            <% @user.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <div class="field">
+
+          <%= f.label :profile_pic %><br>
+          <%= f.file_field :profile_pic %><br><br>
+
+        </div>
+        <div class="actions">
+          <%= f.submit %>
+        </div>
+      <% end %>
+      <% end %>
+    </div>
 </p>
  		 <%= @user.weigh_ins.size %> Weigh-Ins     |     
        
