Feed lists up to 4 weigh ins per person. Correct Upload process for profile pics.

--- a/weightable_practice_scaffolding/app/views/users/all_users.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/all_users.html.erb
@@ -12,7 +12,11 @@
     <% for user in @users do %>
       <tr>
         <td><%= user.name %></td>
+        <% if current_user.friends.include?(User.find(user.id)) %>
+        <td><%= link_to 'Remove friend', destroy_friendships_path( id: user.id), method: :delete %></td>
+        <% else %>
         <td><%= link_to 'Add friend', friendships_path( friend_id: user), method: :post %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
