Add modal form with nested forms. Still need to get nested form to work properly

--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -47,3 +47,11 @@ New to weightable?
 <%= link_to "Sign up", new_user_registration_path %> 
 
 <% end %>
+<% if current_user %>
+  <%= render 'initial_info_modal' %>
+<% end %>
+<script type='text/javascript'>
+  $(document).on('ready', function(e){
+    $('#myModal').modal();
+  });
+</script>
