--- a/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
@@ -11,10 +11,20 @@
       <a class="navbar-brand" href="#"><img src="/assets/weightable_logo.png"></a>
       
        </div>
+
+
     <div class="collapse navbar-collapse">
+      <%= form_tag search_path, :method => 'get', :class=> "navbar-search navbar-left", :role=> "search" do |f| %>
+        <div class="form-group">
+          <%= text_field_tag :search, nil, :placeholder => "Search", :html => {:class=> "form-control"} %>
+        </div>
+        <%= submit_tag "Find!", :name => nil, :id=>"search-submit", :class=>"btn btn-default" %>
+      <% end %>
       <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
       </ul>
     </div>
   </div>
 </nav>
+
+
