--- a/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
@@ -1,30 +1,23 @@
 <%# navigation styled for Bootstrap 3.0 %>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
+  <nav class="navbar navbar-default" role="navigation">
+     <div class="navbar-header">
+       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"><img src="/assets/weightable_logo.png"></a>
-      
-       </div>
-
-
-    <div class="collapse navbar-collapse">
-      <%= form_tag search_path, :method => 'get', :class=> "navbar-search navbar-left", :role=> "search" do |f| %>
-        <div class="form-group">
-          <%= text_field_tag :search, nil, :placeholder => "Search", :html => {:class=> "form-control"} %>
-        </div>
-        <%= submit_tag "Find!", :name => nil, :id=>"search-submit", :class=>"btn btn-default" %>
+         <span class="icon-bar"></span>
+       </button>
+       <%= link_to image_tag("weightable_logo.png", :alt=>"Weightable Logo"), root_path, class: 'navbar-brand' %>
+     </div>
+     <div class="collapse navbar-collapse">
+      <%= form_tag search_path, :method => :get, :class=> "navbar-search navbar-left form-inline", :role=> "search" do %>
+      <div class="form-group">
+        <%= text_field_tag :search, params[:search], {:placeholder => "Search", :class=> "form-control"} %>
+      </div>
+      <%= button_tag "Find!", {:type =>'submit', :class=>"btn btn-default"} %>
       <% end %>
       <ul class="nav navbar-nav">
-        <%= render 'layouts/navigation_links' %>
+         <%= render 'layouts/navigation_links' %>
       </ul>
-    </div>
-  </div>
-</nav>
-
-
+     </div>
+  </nav>
