--- a/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,6 @@
 <%# navigation styled for Bootstrap 3.0 %>
+<%= javascript_tag "var autocomplete_items =  #{ @autocomplete_items.to_json };" %>
+
   <nav class="navbar navbar-default" role="navigation">
      <div class="navbar-header">
        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -21,3 +23,9 @@
       </ul>
      </div>
   </nav>
+
+<script type="text/javascript">
+    jQuery(document).ready(function() {
+        $('.span3').autocomplete({source: autocomplete_items});
+    });
+</script>
