Edit jquery on navigation partial to target the search bar correctly, fixing search.

--- a/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
@@ -26,6 +26,6 @@
 
 <script type="text/javascript">
     jQuery(document).ready(function() {
-        $('.span3').autocomplete({source: autocomplete_items});
+        $('#search').autocomplete({source: autocomplete_items});
     });
 </script>
