Fix index pages to display the correct author and weigh_in owner, and fix links to delete the correct comment.

--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -76,7 +76,8 @@
 	                <span class="name"><%= @user.name %>
 	                <span class="time">posted <%= time_ago_in_words(weight.created_at) %> ago</span>
 	                <p> <%= weight.weight %> </p>
-	                <p> <%= weight.status %> </p>
+                  <p> <%= weight.status %> </p>
+	                <p> <%= button_to "show WeighIn", user_weigh_in_path(@user, weight), method: :get%> </p>
 	            </div>
 	    <% end %>
     </div>
