--- a/weightable_practice_scaffolding/app/views/weigh_ins/_form.html.erb
+++ b/weightable_practice_scaffolding/app/views/weigh_ins/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @weigh_in do |f| %>
+<%= form_for [@user, @weigh_in] do |f| %>
   <%= f.label :weight %>
   <%= f.text_field :weight %><br />
 
