Adjust media queries to reduce nav breaking at certain widths. Still jumps to 2 lines for about 5 px at around 770px. Still working out a solution

--- a/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -73,6 +73,9 @@ canvas#myChart {
 
 form.navbar-search {
   padding-top:23px;
+  // fixes known problem in bootstrap 3 for chrome and safari where
+  // search bar spans entire nav container
+  width: 200px;
 }
 
 button.navbar-toggle {
