--- a/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
@@ -47,7 +47,7 @@ navbar-brand {
   bottom-border: none;
 
   }
-
+  
 }
 
   @media(min-width:992px){
@@ -154,7 +154,7 @@ div {
 
 
 
-@media(min-width:768px){
+@media(min-width:912px){
 
   ul.nav.navbar-nav a{
     padding: 28px;
@@ -169,12 +169,12 @@ div {
 }
 
 
-@media(max-width:767px){
+@media(max-width:911px){
 
    ul.nav.navbar-nav a{
       float: left;
       clear: both;
-      padding: 10px;
+      padding: 28px 0 0 28px;
       &:hover {
       color: #fff; 
       text-decoration: none;
