--- a/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/_navigation.html.erb
@@ -1,23 +1,29 @@
 <%# navigation styled for Bootstrap 3.0 %>
-  <nav class="navbar navbar-default" role="navigation">
-     <div class="navbar-header">
-       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-         <span class="sr-only">Toggle navigation</span>
-         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-       </button>
-       <%= link_to image_tag("weightable_logo.png", :alt=>"Weightable Logo"), root_path, class: 'navbar-brand' %>
-     </div>
-     <div class="collapse navbar-collapse">
-      <%= form_tag search_path, :method => :get, :class=> "navbar-search navbar-left form-inline", :role=> "search" do %>
-      <div class="form-group">
-        <%= text_field_tag :search, params[:search], {:placeholder => "Search", :class=> "form-control"} %>
-      </div>
-      <%= button_tag "Find!", {:type =>'submit', :class=>"btn btn-default"} %>
-      <% end %>
-      <ul class="nav navbar-nav">
-         <%= render 'layouts/navigation_links' %>
-      </ul>
-     </div>
-  </nav>
+<div class="row">
+  <div class="col-lg-12">
+    <nav class="navbar navbar-default" role="navigation">
+       <div class="navbar-header">
+         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+           <span class="sr-only">Toggle navigation</span>
+           <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+         </button>
+         <%= link_to image_tag("weightable_logo.png", :alt=>"Weightable Logo"), root_path, class: 'navbar-brand' %>
+       </div>
+       <div class="collapse navbar-collapse">
+        <%= form_tag search_path, :method => :get, :class=> "navbar-search navbar-left", :role=> "search" do %>
+          <div class="input-group">
+            <%= text_field_tag :search, params[:search], {:placeholder => "Search", :class=> "form-control"} %>
+            <span class="input-group-btn">
+              <%= button_tag "Find!", {:type =>'submit', :class=>"btn btn-default"} %>
+            </span>
+          </div>
+        <% end %>
+        <ul class="nav navbar-nav">
+           <%= render 'layouts/navigation_links' %>
+        </ul>
+       </div>
+    </nav>
+  </div>
+</div>
