--- a/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -81,3 +81,9 @@ form.navbar-search {
 button.navbar-toggle {
   margin-top:23px;
 }
+
+
+//Rounds the left-hand corners of search bar
+.input-group-addon:not(:first-child):not(:last-child), .input-group-btn:not(:first-child):not(:last-child), .input-group .form-control:not(:first-child):not(:last-child) {
+border-radius: 4px 0 0 4px;
+}
