Fix navbar width so it switches to full screen width when in dropdown

--- a/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
@@ -165,7 +165,7 @@ div {
 
     }
   }
-
+  
 }
 
 
@@ -187,7 +187,13 @@ div {
   
 }
  
-
+@media(min-width:767px){
+  form.navbar-search {
+    // fixes known problem in bootstrap 3 for chrome and safari where
+    // search bar spans entire nav container
+    width: 200px;
+  }
+}
 
 
 
