--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -90,7 +90,10 @@
 	    <% end %>
     </div>
 	</div>
-	<script type="text/javascript">$(function() {
+	<script type="text/javascript">
+  
+
+  $(function() {
 	options = {
 		// set to line chart instead of curve
 		//Boolean - If we want to override with a hard coded scale
