--- a/weightable_practice_scaffolding/app/views/users/edit.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/edit.html.erb
@@ -4,3 +4,14 @@
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
+
+<script type="text/javascript">
+
+$(function() {
+  $( "#datepicker" ).datepicker();
+  $("#goal-btn").tooltip();
+  $(".collapse").collapse();
+
+});
+
+</script>
