Add Google Fonts

--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -5,3 +5,13 @@ td {
   padding-right: 15px;
   padding-left: 15px;
 }
+
+#handwriting {
+  font-family: 'Dancing Script', cursive;
+  font-size: 59pt;
+}
+
+#header {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 48pt;
+}
