--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <!-- .friendships[0].friend.weigh_ins[0] - snippet for future feed enhancement -->
+<link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-<div id="header"><h1>Lose weight the <span id="handwriting">Gus Chiggins</span> way.</h1>
+<h1 id='header'>Lose weight the <span id="handwriting">Gus Chiggins</span> way.</h1>
 </div>
 
 <div class="gus">
@@ -18,39 +20,9 @@
   <h3>New to Weightable?</h3>
   <!-- Sign in with Facebook -->
   <%= link_to(image_tag("/index/fb.png", :alt => "Sign-in with Facebook"), user_omniauth_authorize_path(:facebook)) %>
-
+  <p>or</p>
+  <%= link_to(image_tag("/index/register.png", :alt => "Create a Weightable Account"), new_user_registration_path) %>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
