Add Devise sign in form to homepage

--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -8,10 +8,10 @@ td {
 
 #handwriting {
   font-family: 'Dancing Script', cursive;
-  font-size: 59pt;
+  font-size: 2em;
 }
 
 #header {
   font-family: 'Open Sans', sans-serif;
-  font-size: 48pt;
+  font-size: 2em;
 }
