--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -1,8 +1,9 @@
 <!-- .friendships[0].friend.weigh_ins[0] - snippet for future feed enhancement -->
 <link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
-<h1 id='header'>Lose weight the <span id="handwriting">Gus Chiggins</span> way.</h1>
+<h1 id='header'>Lose weight the <span id="handwriting"><u>Gus Chiggins</u></span> way.</h1>
 
 <!-- Underline will get weird with scaling for mobile, will need to look into this further
  <img id='underline' src="/index/underline.png"/> -->
@@ -12,6 +13,15 @@
   <img src="/index/gus_chiggins.jpg"/>
   <p>Gus Chiggins</p>
   <p>Weightable Founder & CEO</p>
+</div>
+
+<div class="info">
+<h3>Weightable is:</h3>
+<ul>
+  <li class="fa fa-check">Results Oriented</li><br />
+  <li class="fa fa-check">Socially Connected</li><br />
+  <li class="fa fa-check">Accountability Focused</li><br />
+</ul>
 </div>
 
 <div class="login">
@@ -34,9 +44,9 @@
 
   <h3>New to Weightable?</h3>
   <!-- Sign in with Facebook -->
-  <%= link_to(image_tag("/index/fb.png", :alt => "Sign-in with Facebook"), user_omniauth_authorize_path(:facebook)) %>
+  <%= link_to(image_tag("/index/fb.png", :alt => "Sign-in with Facebook", :class => "newToWeightable"), user_omniauth_authorize_path(:facebook)) %>
   <p>or</p>
-  <%= link_to(image_tag("/index/register.png", :alt => "Create a Weightable Account"), new_user_registration_path) %>
+  <%= link_to(image_tag("/index/register.png", :alt => "Create a Weightable Account", :class => "newToWeightable"), new_user_registration_path) %>
 </div>
 
 
