Further compress images on index page

--- a/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
@@ -105,11 +105,10 @@ pre {
 
 a {
   color: #ed6c44;
-  &:hover {
+  /*&:hover {
     color: #ed6c44;
-    background-color: #386380;
-    
-  }
+    background-color: #386380;*/
+  /*}*/
 }
 
 div {
