--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -16,6 +16,8 @@ td {
   font-size: 2em;
 }
 
+.sign-in-button
+
 .newToWeightable {
   display: inline;
 }
@@ -26,11 +28,10 @@ td {
 
 .testimonial p {
   font-family: 'Open Sans', sans-serif;
-  font-size: 1em;
 }
 
 .testimonial {
-  width: 300px;
+  width: 320px;
   height: 227px;
   background-color: white;
   margin: 25px;
