--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -36,8 +36,9 @@
         
         <%= f.check_box :remember_me %>
         <%= f.label :remember_me %><br />
-        
-        <%= f.submit 'Sign in' %>
+
+        <%= f.submit 'Sign in', class: "sign-in-button" %>
+
         <%= link_to "Forgot your password?", new_password_path('user') %>
       <% end %>
     </div>
